[Core] Add User reference.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
+        "clastic/user-bundle": "*",
         "symfony/dependency-injection": "~2.6",
         "doctrine/doctrine-bundle": "*"
     },
