--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": ">=5.6",
         "clastic/user-bundle": "*",
         "clastic/node-bundle": "*",
-        "symfony/dependency-injection": "^3.0",
+        "symfony/dependency-injection": "^2.7|^3.0",
         "doctrine/doctrine-bundle": "*"
     },
     "autoload": {
